nexus/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
  namespace: fima-infra
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: sonatype-nexus
    release: nexus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: fima-infra
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nexus.fima.local
      http:
        paths:
          - backend:
              serviceName: nexus
              servicePort: 8081
