nexus/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fima
      name: nexus
  template:
    metadata:
      labels:
        app: fima
        name: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.16.1
          resources:
            limits:
              memory: "4Gi"
              cpu: "1000m"
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - name: http-port
              containerPort: 8081
          volumeMounts:
            - name: nexus-volume
              mountPath: /nexus-data
      volumes:
        - name: nexus-volume
          persistentVolumeClaim:
            claimName: nexus-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  type: NodePort
  ports:
    - port: 8081
      targetPort: http-port
  selector:
    app: fima
    name: nexus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nexus.fima.local
      http:
        paths:
          - backend:
              serviceName: nexus
              servicePort: 8081
